<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/random_number_between_0_and_10"
            app:boxBackgroundColor="@color/white"
            app:counterMaxLength="20"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNumberInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:maxLines="1"
                android:padding="18dp" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSubmitInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/backborder_button"
            android:text="@string/random_number_generator"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <TextView
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:text="@string/kindly_note_green_is_match_and_red_is_not_a_match"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/input_number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/random_number_generated"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvInputNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:textSize="50sp"/>

            <TextView
                android:id="@+id/tvGeneratedRandomNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="50sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvTextAboutMilliseconds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvMillisecondsDifference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tvTrials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>